--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,13 @@ html, body {
     padding-bottom: 10px;
     color: #3f2e5b;
 }
-.add_block {
+.adding_block {
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
     padding: 5px 5%;
-    background-color: #f0f0f0;
+    background: linear-gradient(to right, #fafafa, #e0e0e0, #fafafa);
     color: #040404;
 }
 input {
@@ -57,14 +57,48 @@ input {
     cursor: pointer;
     opacity: .7;
 }
-.tasks_block {
-    width: 100%;
-    background-color: #fafafa;
-    border-radius: 4px;
-    padding: 5px 5%;
-}
-.tasks_text {
+.items_text {
     text-align: left;
     font-size: 16px;
     font-weight: 300;
+}
+#items_wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 500px;
+    padding: 5px 5%;
+}
+#item_block {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+    background-color: #fafafa;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+.markItem {
+    text-align: center;
+    width: 40px;
+    height: auto;
+    top: 0;
+    bottom: 0;
+    margin: 0 auto;
+}
+input[type="checkbox"] {
+    width: auto;
+}
+#markAll {
+
+}
+.editItem {
+
+}
+.bRemoveItem {
+    content: "x";
+}
+#clearComp {
+
 }
