--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,14 @@ html, body {
     padding-bottom: 10px;
     color: #3f2e5b;
 }
+.copyright {
+    text-align: center;
+    font-size: 12px;
+    font-weight: 300;
+    padding: 5px 5% 0 5%;
+    color: #3f2e5b;
+    opacity: .5;
+}
 .menu_block {
     display: flex;
     flex-direction: row;
@@ -46,7 +54,27 @@ html, body {
     font-size: 14px;
     font-weight: 300;
 }
-/* content / js styles */
+
+
+
+
+
+.done {
+    text-decoration: line-through;
+}
+#checkBlock {
+    height: 15px;
+    width: 15px;
+    border-radius: 8px;
+    background: red;
+    padding-right: 5px;
+}
+
+
+
+
+
+/* content / js styles for ENGINE.JS */
 #addButton, #clearButton { /* divs as buttons */
     display: inline-block;
     background-color: #3f2e5b;
@@ -75,10 +103,10 @@ html, body {
     font-weight: 300;
 }
 
-#items_wrap div { /* each div ccontains checkbox, item and remove button */
+#items_wrap .item { /* each div contains checkbox, item and remove button */
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start; /* edited */
     align-items: center;
     width: 100%;
     height:50px;
@@ -115,7 +143,7 @@ html, body {
     margin: 0;
 }
 #items_wrap div .removeItem:after {
-    background-image: url("cross_icon.png");
+
 }
 #items_wrap div:hover .removeItem {
     display: block;
