--- a/css/style.css
+++ b/css/style.css
@@ -54,33 +54,26 @@ html, body {
     font-size: 14px;
     font-weight: 300;
 }
-
-
-
-
-
-.done {
-    text-decoration: line-through;
-}
-#checkBlock {
-    height: 15px;
-    width: 15px;
-    border-radius: 8px;
-    background: red;
-    padding-right: 5px;
+.stats {
+    align-self: center;
+    padding-left: 5px;
 }
 
 
 
 
 
-/* content / js styles for ENGINE.JS */
+
+
+
+
+
 #addButton, #clearButton { /* divs as buttons */
     display: inline-block;
     background-color: #3f2e5b;
     color:#fafafa;
     text-align:center;
-    margin-left:10px;
+    margin-left: 10px;
     padding: 3px 10px;
 }
 #addButton {
@@ -109,58 +102,50 @@ html, body {
     justify-content: flex-start; /* edited */
     align-items: center;
     width: 100%;
-    height:50px;
+    height:30px;
     background-color: #f5f5f5;
     margin-top: 2px;
     margin-bottom: 2px;
     padding: 3px 5%;
 }
-#items_wrap div .item_inner_wrap { /* service div */
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 0;
-    margin: 0;
-    background-color: inherit;
-}
-#items_wrap div:hover {
+
+#items_wrap .item:hover {
     background-color: #f1f1f1;
 }
-#items_wrap div .checkMark { /* checkbox inside the item div */
-    width: 20px;
+
+#items_wrap .item #checkBox {
     height: 15px;
+    width: 15px;
+    background: #ff9999;
+    margin-right: 5px;
 }
-#items_wrap div span {  /* item text container */
-    padding-left: 15px;
+.done {
+    text-decoration: line-through;
 }
-#items_wrap div .removeItem { /* remove button [x] */
-    display: none;
+
+#items_wrap .item #killItem { /* remove button [x] */
     background-color: inherit;
     width: 25px;
     height: 25px;
     background-image: url("cross_icon.png");
     padding: 0;
-    margin: 0;
+    margin-left: 10px;
 }
-#items_wrap div .removeItem:after {
 
-}
-#items_wrap div:hover .removeItem {
-    display: block;
-}
 .editItem {
     padding: 5px 7px;
     width: 250px;
 }
+
 input {
     padding: 5px 7px;
     width: 300px;
 }
-input[type="checkbox"] {
-    width: auto;
-}
+
 #markAll {
-    width: 20px;
+    width: 15px;
     height: 15px;
-    float: left;
+    align-self: center;
+    background-color: #ff9999;
+    margin-right:5px;
 }
