--- a/css/style.css
+++ b/css/style.css
@@ -202,3 +202,21 @@ input {
     background-color: #d0d0d0;
     cursor: pointer;
 }
+
+/*
+input[type="checkbox"] {
+    display:none;
+}
+input[type="checkbox"] + label span {
+    display: flex;
+    background: url(check_x15.png) no-repeat;
+    background-position: 0;
+    padding-left: 20px;
+    cursor:pointer;
+    opacity: .5;
+}
+input[type="checkbox"]:checked + label span {
+    background: url(check_x15.png) no-repeat;
+    background-position: 0;
+    opacity: 1;
+}*/
